Fix for resubmission (remove unnecessary span tags, refactor for legibility)

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ body {
 }
 
 .bonusheading {
-  color: rgb(232, 98, 232)
+  color: rgb(232, 98, 232);
   float: right;
 }
 
